add method for bracket and round robin match

--- a/acitivty/01/index.html
+++ b/acitivty/01/index.html
@@ -25,5 +25,6 @@
   <script src="./trainer.js"></script>
   <script src="./battle.js"></script>
   <script src="./tournament.js"></script>
+  <script src="./roundRobin.js"></script>
   <script src="./index.js"></script>
 </html>
