update pokemon and trainer pool

--- a/acitivty/01/index.html
+++ b/acitivty/01/index.html
@@ -18,6 +18,7 @@
   </body>
 
   <script src="./pokemon/pokemon.js"></script>
+  <script src="./pokemon/normalPokemon.js"></script>
   <script src="./pokemon/electricPokemon.js"></script>
   <script src="./pokemon/firePokemon.js"></script>
   <script src="./pokemon/rockPokemon.js"></script>
